# aind-ibl-ephys-alignment-preprocessing

./: .copier-answers.yml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci-call.yml  docs-ci.yml
docs/: external_asset_references.md
docs/source/: api.rst  conf.py  index.md
scripts/: run_linters_and_checks.sh
src/aind_ibl_ephys_alignment_preprocessing/: __init__.py  _constants.py  co_asset_resolver.py  datapackage.py  datapackage_schema.py  discovery.py  ephys.py  histology.py  manifest.py  pipeline.py  probes.py  stages.py  types.py  validation.py
src/aind_ibl_ephys_alignment_preprocessing/_async/: __init__.py  concurrency.py  ephys.py  histology.py  pipeline.py  probes.py
src/aind_ibl_ephys_alignment_preprocessing/schemas/aind-ibl-ephys-alignment-datapackage/3.1.0/: datapackage.schema.json
src/aind_ibl_ephys_alignment_preprocessing/scripts/: export_datapackage_schema.py  run.py
tests/: test_co_asset_resolver.py  test_datapackage.py  test_datapackage_schema.py  test_example.py  test_manifest.py  test_sorting_detection.py  test_stages.py
